--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -6,7 +6,8 @@
 }
 
 .navbar .logo {
-    width: 150px;
+    width: 180px;
+    height: auto;
 }
 
 .navbar-menu {
@@ -97,7 +98,8 @@ position: relative;
 }
 @media (max-width:1050px) {
     .navbar .logo {
-        width: 140px;
+        width: 160px;
+        height: auto;
     }
 
     .navbar-menu {
