--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -6,8 +6,9 @@
 }
 
 .navbar .logo {
-    width: 180px;
+    width: 200px;
     height: auto;
+    max-height: 70px;
 }
 
 .navbar-menu {
@@ -98,8 +99,9 @@ position: relative;
 }
 @media (max-width:1050px) {
     .navbar .logo {
-        width: 160px;
+        width: 180px;
         height: auto;
+        max-height: 60px;
     }
 
     .navbar-menu {
