--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -6,9 +6,9 @@
 }
 
 .navbar .logo {
-    width: 200px;
-    height: auto;
-    max-height: 70px;
+    width: 220px;
+    height: 65px;
+    object-fit: contain;
 }
 
 .navbar-menu {
@@ -100,8 +100,8 @@ position: relative;
 @media (max-width:1050px) {
     .navbar .logo {
         width: 180px;
-        height: auto;
-        max-height: 60px;
+        height: 53px;
+        object-fit: contain;
     }
 
     .navbar-menu {
